# AI_Mixer

./: .env.template  .gitignore  CLAUDE.md  CONTINUITY.md  CROSSFADE_CLUB_PRD.md  PRD.md  README.md  SETUP.md  UI_GUIDE.md  config.yaml  mixer_ui.py  pyproject.toml  requirements.txt  run_batch.py
.claude/: settings.local.json
batch/: README.md  __init__.py  errors.py  runner.py
config/: captions.yaml
config/themes/: award_elegant.yaml  chill_lofi.yaml  mashup_chaos.yaml  sponsor_neon.yaml
director/: README.md  __init__.py  camera.py  errors.py  events.py  safety.py  themes.py  timeline.py  types.py
docs/archive/: IMPLEMENTATION_PROGRESS.md
docs/crossfade-club/: CROSSFADE_CLUB_COMPLETE.md
encoder/: __init__.py  captions.py  errors.py  platform.py  thumbnail.py  types.py
mixer/: __main__.py  cli.py  config.py  types.py
mixer/agents/: __init__.py  analyst.py  curator.py  engineer.py  ingestion.py
mixer/audio/: analysis.py  processing.py
mixer/llm/: semantic.py
mixer/memory/: __init__.py  client.py  queries.py  schema.py
mixer/utils/: logging.py
mixer/workflow/: __init__.py  graph.py  nodes.py  state.py
scripts/: benchmark.py  benchmark_pipeline.py  check_dependencies.bat  check_dependencies.sh  test_director.py  test_encoder.py  test_memory_demo.py  test_studio.py
studio/: __init__.py  asset_loader.py  errors.py  renderer.py  types.py
studio/assets/: README.md
studio/blender_scripts/: animate.py
tests/: conftest.py
tests/batch/: __init__.py  test_runner.py
tests/director/: __init__.py  test_camera.py  test_events.py  test_safety.py  test_themes.py
tests/encoder/: __init__.py  test_captions.py  test_platform.py  test_thumbnail.py
tests/integration/: __init__.py  test_cli_integration.py  test_e2e_workflow.py  test_pipeline.py
tests/studio/: __init__.py  test_asset_loader.py  test_renderer.py
tests/unit/: test_analyst.py  test_config.py  test_curator.py  (+5 more)
(+30 files in other folders)
