[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixer"
version = "0.1.0"
description = "An intelligent audio mashup pipeline using semantic understanding"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "The Mixer Team"}
]
keywords = ["audio", "mashup", "music", "AI", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "chromadb==0.4.22",
    "sentence-transformers>=2.2.0",
    "librosa>=0.10.0",
    "openai-whisper>=20230314",
    "pydub>=0.25.0",
    "pyrubberband>=0.3.0",
    "soundfile>=0.12.0",
    "demucs>=4.0.0",
    "yt-dlp>=2023.3.4",
    "ffmpeg-python>=0.2.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
mixer = "mixer.cli:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mixer --cov-report=html --cov-report=term"
